knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Primary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason__c</fullName>
    <label>Primary Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Not Returned,</fullName>
            </value>
            <value>
                <fullName>Coverage Discontinued,</fullName>
            </value>
            <value>
                <fullName>Deceased,</fullName>
            </value>
            <value>
                <fullName>Hospital App Not Returned,</fullName>
            </value>
            <value>
                <fullName>Hospital Contract Termination,</fullName>
            </value>
            <value>
                <fullName>Insurance Expired,</fullName>
            </value>
            <value>
                <fullName>Past Issues with facility,</fullName>
            </value>
            <value>
                <fullName>PEP Not Returned,</fullName>
            </value>
            <value>
                <fullName>Per Hospital,</fullName>
            </value>
            <value>
                <fullName>Per Provider,</fullName>
            </value>
            <value>
                <fullName>Per Risk Manager,</fullName>
            </value>
            <value>
                <fullName>Privileges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>