knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Pro_Forma_Model__c.field-meta.xml
<CustomField>
    <fullName>Pro_Forma_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pro Forma Model</label>
    <referenceTo>Pro_Forma_Model__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>