knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Professionalism_Reason__c.field-meta.xml
<CustomField>
    <fullName>Professionalism_Reason__c</fullName>
    <label>Professionalism Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Hygiene</fullName>
            </value>
            <value>
                <fullName>Recurrent Tardiness</fullName>
            </value>
            <value>
                <fullName>Personal Integrity</fullName>
            </value>
            <value>
                <fullName>Inappropriateness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>