knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Provide_description__c.field-meta.xml
<CustomField>
    <fullName>Provide_description__c</fullName>
    <label>Provide description</label>
    <length>64</length>
    <type>Text</type>
</CustomField>