knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Provider_Education__c.field-meta.xml
<CustomField>
    <fullName>Provider_Education__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provider Education</label>
    <type>Checkbox</type>
</CustomField>