knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Provider_Network_Contract__c.field-meta.xml
<CustomField>
    <fullName>Provider_Network_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Network Contract</label>
    <referenceTo>ProviderNetworkContract</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>