knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Provider_Portal_Login__c.field-meta.xml
<CustomField>
    <fullName>Provider_Portal_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provider Portal Login</label>
    <type>Checkbox</type>
</CustomField>