knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Provider_Response__c.field-meta.xml
<CustomField>
    <fullName>Provider_Response__c</fullName>
    <label>Provider Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-Non-Responsive</fullName>
            </value>
            <value>
                <fullName>1-Poor</fullName>
            </value>
            <value>
                <fullName>2-Good</fullName>
            </value>
            <value>
                <fullName>3-Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>