knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/ProviderPortal_Route__c.field-meta.xml
<CustomField>
    <fullName>ProviderPortal_Route__c</fullName>
    <label>ProviderPortal Route</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chartviewer</fullName>
            </value>
            <value>
                <fullName>Credentialing</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Earnings</fullName>
            </value>
            <value>
                <fullName>My SCP Complete</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>LoginTrouble</fullName>
            </value>
            <value>
                <fullName>Mailbox</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Workday</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>