knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Qualifications_Reason__c.field-meta.xml
<CustomField>
    <fullName>Qualifications_Reason__c</fullName>
    <label>Qualifications Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Issue</fullName>
            </value>
            <value>
                <fullName>Criminal Background</fullName>
            </value>
            <value>
                <fullName>Health Concern</fullName>
            </value>
            <value>
                <fullName>Impairment</fullName>
            </value>
            <value>
                <fullName>License Revocation</fullName>
            </value>
            <value>
                <fullName>References</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>