knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Quality_Reason__c.field-meta.xml
<CustomField>
    <fullName>Quality_Reason__c</fullName>
    <label>Quality Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Care</fullName>
            </value>
            <value>
                <fullName>Provider Skillset</fullName>
            </value>
            <value>
                <fullName>Patient Volume</fullName>
            </value>
            <value>
                <fullName>Provider&apos;s Efficiencies</fullName>
            </value>
            <value>
                <fullName>Patient Acuity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>