knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Reason_for_Shift_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Shift_Bonus__c</fullName>
    <label>Reason for Shift Bonus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abrupt Removal of Provider</fullName>
            </value>
            <value>
                <fullName>Admin Reasons</fullName>
            </value>
            <value>
                <fullName>Call Off</fullName>
            </value>
            <value>
                <fullName>Core Provider Needed</fullName>
            </value>
            <value>
                <fullName>Higher Hourly Rate</fullName>
            </value>
            <value>
                <fullName>Holiday Pay Extra</fullName>
            </value>
            <value>
                <fullName>New Start-Up</fullName>
            </value>
            <value>
                <fullName>Shift Travel-Expenses</fullName>
            </value>
            <value>
                <fullName>Surge/Additional Coverage</fullName>
            </value>
            <value>
                <fullName>Tiered Bonus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>