knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Reason_for_Termination__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Termination__c</fullName>
    <label>Reason for Termination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Inactive_Reason</valueSetName>
    </valueSet>
</CustomField>