knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Rehirable__c.field-meta.xml
<CustomField>
    <fullName>Rehirable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Rehirable</label>
    <type>Checkbox</type>
</CustomField>