knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Remaining_Open_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Open_Shifts__c</fullName>
    <label>Remaining Open Shifts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>