knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Schumacher_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Schumacher_Email_Address__c</fullName>
    <label>Schumacher Email Address</label>
    <type>Email</type>
</CustomField>