knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Select_Package__c.field-meta.xml
<CustomField>
    <fullName>Select_Package__c</fullName>
    <label>Select Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Package 1</fullName>
            </value>
            <value>
                <fullName>Package 2</fullName>
            </value>
            <value>
                <fullName>Package 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>