knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Service_Now__c.field-meta.xml
<CustomField>
    <fullName>Service_Now__c</fullName>
    <label>Service Now</label>
    <length>255</length>
    <type>Text</type>
</CustomField>