knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Service_Reason__c.field-meta.xml
<CustomField>
    <fullName>Service_Reason__c</fullName>
    <label>Service Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interpersonal Skills</fullName>
            </value>
            <value>
                <fullName>Anger Management</fullName>
            </value>
            <value>
                <fullName>Shift Attendance</fullName>
            </value>
            <value>
                <fullName>Organizational Skills</fullName>
            </value>
            <value>
                <fullName>Patient Complaints</fullName>
            </value>
            <value>
                <fullName>Provider Behavior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>