knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Service_Type_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Other_Description__c</fullName>
    <label>Service Type Other Description</label>
    <length>64</length>
    <type>Text</type>
</CustomField>