knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Shift_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Shift_Compensation__c</fullName>
    <formula>IF(ISPICKVAL(Bonus_Unit_of_Measure__c, &quot;per Hour&quot;),  Shift_Duration__c  *  Shift__r.Rate__c ,0)</formula>
    <label>Shift Compensation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>