knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Shift_Duration__c.field-meta.xml
<CustomField>
    <fullName>Shift_Duration__c</fullName>
    <formula>( Shift_End_Date_Time__c  - Shift_Start_Date_Time__c )* 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shift Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>