knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Shift_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Shift_End_Date_Time__c</fullName>
    <label>Shift End Date/Time</label>
    <type>DateTime</type>
</CustomField>