knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Standard_1_Year_Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Standard_1_Year_Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standard 1-Year Auto-Renewal</label>
    <type>Checkbox</type>
</CustomField>