knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Standard_Malpractice_Limits__c.field-meta.xml
<CustomField>
    <fullName>Standard_Malpractice_Limits__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Standard Malpractice Limits</label>
    <type>Checkbox</type>
</CustomField>