knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Start_up_Costs__c.field-meta.xml
<CustomField>
    <fullName>Start_up_Costs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start-up Costs</label>
    <type>Checkbox</type>
</CustomField>