knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Start_up_Costs_how_long__c.field-meta.xml
<CustomField>
    <fullName>Start_up_Costs_how_long__c</fullName>
    <label>Start-up Costs, how long?</label>
    <length>64</length>
    <type>Text</type>
</CustomField>