knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Telehealth__c.field-meta.xml
<CustomField>
    <fullName>Telehealth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telehealth</label>
    <type>Checkbox</type>
</CustomField>