knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Termination_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Request_Date__c</fullName>
    <inlineHelpText>Date termination request was submitted or automated</inlineHelpText>
    <label>Termination Request Date</label>
    <type>Date</type>
</CustomField>