knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Terms_reflected_in_the_Proforma__c.field-meta.xml
<CustomField>
    <fullName>Terms_reflected_in_the_Proforma__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Volume Protector is checked, are terms reflected in the Proforma?</inlineHelpText>
    <label>Terms reflected in the Profoma</label>
    <type>Checkbox</type>
</CustomField>