knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Type_of_Review__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Review__c</fullName>
    <label>Type of Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attestations Reviewed</fullName>
            </value>
            <value>
                <fullName>Chief Complaint, History, Exam</fullName>
            </value>
            <value>
                <fullName>Cloned A/P</fullName>
            </value>
            <value>
                <fullName>Critical Care</fullName>
            </value>
            <value>
                <fullName>Discharge Time Missing</fullName>
            </value>
            <value>
                <fullName>Dx/Status Update Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>