knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Volume_Protector__c.field-meta.xml
<CustomField>
    <fullName>Volume_Protector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Volume Protector</label>
    <type>Checkbox</type>
</CustomField>