knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Voluntary_Termination__c.field-meta.xml
<CustomField>
    <fullName>Voluntary_Termination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voluntary Termination</label>
    <type>Checkbox</type>
</CustomField>