knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/What_is_SCP_s_contribution__c.field-meta.xml
<CustomField>
    <fullName>What_is_SCP_s_contribution__c</fullName>
    <label>What is SCP’s contribution?</label>
    <length>64</length>
    <type>Text</type>
</CustomField>