knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Work_Request__c.field-meta.xml
<CustomField>
    <fullName>Work_Request__c</fullName>
    <label>Work Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>