knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/recordTypes/Client_Agreement_Request.recordType-meta.xml
<RecordType>
    <fullName>Client_Agreement_Request</fullName>
    <active>true</active>
    <businessProcess>Support Case Process</businessProcess>
    <label>Client Agreement Request</label>
</RecordType>