knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/recordTypes/Client_Offboarding.recordType-meta.xml
<RecordType>
    <fullName>Client_Offboarding</fullName>
    <active>true</active>
    <businessProcess>Client Offboarding Support Process</businessProcess>
    <label>Client Offboarding</label>
</RecordType>