knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/recordTypes/Client_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Client_Onboarding</fullName>
    <active>true</active>
    <businessProcess>Client Onboarding Support Process</businessProcess>
    <label>Client Onboarding</label>
</RecordType>