knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/recordTypes/Clinical_Match.recordType-meta.xml
<RecordType>
    <fullName>Clinical_Match</fullName>
    <active>true</active>
    <businessProcess>Clinical Match Support Process</businessProcess>
    <label>Clinical Match</label>
</RecordType>