knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/recordTypes/Clinician_Change.recordType-meta.xml
<RecordType>
    <fullName>Clinician_Change</fullName>
    <active>true</active>
    <businessProcess>Support Case Process</businessProcess>
    <label>Clinician Change</label>
</RecordType>