knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/recordTypes/Clinician_Intake_Form.recordType-meta.xml
<RecordType>
    <fullName>Clinician_Intake_Form</fullName>
    <active>true</active>
    <businessProcess>Clinician Intake Form Support Process</businessProcess>
    <label>Clinician Intake Form</label>
</RecordType>