knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/recordTypes/Clinician_Offboarding.recordType-meta.xml
<RecordType>
    <fullName>Clinician_Offboarding</fullName>
    <active>true</active>
    <businessProcess>Clinician Offboarding Support Process</businessProcess>
    <label>Clinician Offboarding</label>
</RecordType>