knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/recordTypes/Clinician_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Clinician_Onboarding</fullName>
    <active>true</active>
    <businessProcess>Clinician Onboarding Support Process</businessProcess>
    <label>Clinician Onboarding</label>
</RecordType>