knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/recordTypes/Collaborative_Practice_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Collaborative_Practice_Agreement</fullName>
    <active>true</active>
    <businessProcess>Clinician Onboarding Support Process</businessProcess>
    <label>Collaborative Practice Agreement</label>
</RecordType>