knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/recordTypes/Documentation.recordType-meta.xml
<RecordType>
    <fullName>Documentation</fullName>
    <active>true</active>
    <businessProcess>Providerportal ask a Question</businessProcess>
    <label>Documentation</label>
</RecordType>