knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/recordTypes/Exit_Interview.recordType-meta.xml
<RecordType>
    <fullName>Exit_Interview</fullName>
    <active>true</active>
    <businessProcess>Clinician Offboarding Support Process</businessProcess>
    <label>Exit Interview</label>
</RecordType>