knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/recordTypes/Leadership_Change.recordType-meta.xml
<RecordType>
    <fullName>Leadership_Change</fullName>
    <active>true</active>
    <businessProcess>Leadership Change Support Process</businessProcess>
    <label>Leadership Change</label>
</RecordType>