knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/recordTypes/Providerportal_ask_a_Question.recordType-meta.xml
<RecordType>
    <fullName>Providerportal_ask_a_Question</fullName>
    <active>true</active>
    <businessProcess>Providerportal ask a Question</businessProcess>
    <label>Providerportal ask a Question</label>
</RecordType>