knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/recordTypes/Rate_Approval.recordType-meta.xml
<RecordType>
    <fullName>Rate_Approval</fullName>
    <active>true</active>
    <businessProcess>Rate Approval Support Process</businessProcess>
    <label>Rate Approval</label>
</RecordType>