knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/recordTypes/Risk_Review.recordType-meta.xml
<RecordType>
    <fullName>Risk_Review</fullName>
    <active>true</active>
    <businessProcess>Risk Review Support Process</businessProcess>
    <label>Risk Review</label>
</RecordType>