knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/recordTypes/Support.recordType-meta.xml
<RecordType>
    <fullName>Support</fullName>
    <active>true</active>
    <businessProcess>Support Case Process</businessProcess>
    <label>Support</label>
</RecordType>