knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/validationRules/Clinician_Change_Closed_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Clinician_Change_Closed_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName  = &apos;Clinician_Change&apos;, ISPICKVAL( Status , &apos;Closed&apos;) ,  ISPICKVAL( Closed_Reason__c , &apos;&apos;) )</errorConditionFormula>
    <errorMessage>You must provide a &apos;Closed Reason&apos; when the &apos;Status&apos; is &apos;Closed&apos;.</errorMessage>
</ValidationRule>