knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/validationRules/Rule_Offboarding_CaseClose_ScenarioLastD.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule_Offboarding_CaseClose_ScenarioLastD</fullName>
    <active>true</active>
    <description>This is the rule that runs when the filed below is not populated when the user tries to case a close

Last Day

PR1050558-5580</description>
    <errorConditionFormula>AND(
    $RecordType.DeveloperName = &quot;Clinician_Offboarding&quot;,
    OR(
        /* Scenario 1: SCP Type that is Closed/Complete but missing a date */
        AND(
            ISPICKVAL(Type, &quot;SCP&quot;),
            ISPICKVAL(Status, &quot;Closed&quot;),
            ISPICKVAL(Closed_Reason__c, &quot;Complete&quot;),
            ISBLANK(Last_Day__c)
        ),
        /* Scenario 2: Facility Type missing a date */
        AND(
            ISPICKVAL(Type, &quot;Facility&quot;),
            ISBLANK(Last_Day__c)
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Last_Day__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>